--- a/list.jade
+++ b/list.jade
@@ -27,6 +27,8 @@ block content
       a(href='about.html') О фонде
     li
       a(href='faces.html') Лица
+    li
+      a(href='faces_1.html') Лица 1
     //li
     //  a(href='.html') 
     //li
