--- a/news.jade
+++ b/news.jade
@@ -12,7 +12,9 @@ block content
     li
       a(href='#') Тендеры
     li
-      a.active(href='#') Все новости
+      a(href='#') Новости
+    li
+      a.active(href='#') Все
   .b_newsbox
     include partials/news/news
     include partials/news/news
