--- a/partials/header.jade
+++ b/partials/header.jade
@@ -8,10 +8,14 @@ header.b_layout
         li
           a(href='#') О фонде
         li
-          a.active(href='#') Проекты
+          a.active(href='#') Президиум
         li
-          a(href='#') Новости
+          a(href='#') Попечительский совет
+        li
+          a(href='#') Проекты
         li
           a(href='#') Публикации
+        li
+          a(href='#') Новости
         li
           a(href='#') Контакты
