--- a/partials/projects/project_1.jade
+++ b/partials/projects/project_1.jade
@@ -5,49 +5,49 @@
       .vam
         img(src='images/prof_logo.png')
         .title.typo_sh Профориентационный проект
-        p text from png
+        p Фонд «Интеллектуальные инвестиции» и Департамент образования города Москвы (ДОгМ) проводят мероприятия по профорнавигации школьников уже в тесчение нескольких лет. Куратором и организатором большей части мероприятий от московской системы среднего образования выступает ГБУ «Городской центр профессионального и карьерного развития» (ГЦПиКР). 
       .vam_helper
   section.slide_2
     .b_layout
       .vam.w100
         .title.typo_sh партнёры
-        p text from png
+        p В качестве партнёров в проекте участвуют кадровые фирмы, представители ведущих работодателей Москвы, высшие учебные заведения столицы, другие образовательные организации.<br />Недавно к проекту подключился Департамент науки, промышленной политики и предпринимательства Правительства Москвы.
         .title.typo_sh информация о проекте
-        p text from png
+        p В качестве движущей силы и организационного ресурса используется уникальная система наставничества «студент – школьник». Студенты, именные стипендиаты Правительства Москвы, под руководством кураторов из Городского центра профессионального и карьерного развития становятся HR-наставниками школьников. Помогают ребятам сориентироваться в многообразии рынка труда, в разнообразии профессий и выбрать «свое, подходящее» среди безграничных возможностей большого города. Для этого в течение учебного года старшеклассники выполняют массу увлекательных заданий и участвуют в мероприятиях различных видов деятельности, направленных на построение индивидуальной образовательной и карьерной траектории школьника.
       .vam_helper
   section.slide_3.m_left
     .b_layout
       .vam
         .title.typo_sh мероприятия
-        p text from png
+        p Ученик принимает участие в мероприятиях. Согласно его интересам и предпочтениям формируются цели, к которым он может двигаться. Помимо информации об интересах, мероприятия дают понимание об уровне подготовки ученика в той или иной области.
       .vam_helper
       img(src='http://placehold.it/600x560')
   section.slide_3.m_right
     .b_layout
       .vam
         .title.typo_sh цели
-        p text from png
+        p Ученик ставит собственные цели и видит возможные пути их достижения. Это помогает ученику яснее представить свой профессиональный путь и понять, чем ему действительно хотелось бы заниматься.
       .vam_helper
       img(src='http://placehold.it/600x560')
   section.slide_3.m_left
     .b_layout
       .vam
         .title.typo_sh статистика
-        p text from png
+        p По результатам участия в мероприятиях и прохождения тестов, ученик видит личную статистику и соотносит ее со своими целями. Таким образом, он может корректировать путь дальнейшего движения.
       .vam_helper
       img(src='http://placehold.it/600x560')
   section.slide_3.m_right
     .b_layout
       .vam
         .title.typo_sh организации
-        p text from png
+        p Различные организации и компании представляют информацию о себе внутри системы. Ученик может искать и выбирать ту, в которой ему хотелось бы работать.
       .vam_helper
       img(src='http://placehold.it/600x560')
   section.slide_4
     .b_layout
       .vam
-        .title.typo_sh организации
-        p text from png
+        .title.typo_sh Подготовка профессионалов
+        p Цель проекта — выявление у учеников стремления, желания и возможностей развития в сторону той или иной специальности. Подготовка учеников курируется специалистами в соответствии с индивидуальными особенностями и потребностями каждого. Проект дает возможность появления новых подготовленных кадров, хорошо знающих свое дело, с радостью выполняющих свою работу и движимых идеей.
         p.center 
           a.button(href='#') Посмотреть проект
       .vam_helper
