--- a/partials/projects/project_2.jade
+++ b/partials/projects/project_2.jade
@@ -5,5 +5,54 @@
       .vam
         img(src='images/prof_logo.png')
         .title.typo_sh Клуб инвесторов москвы
-        p text from png
+        p Клуб инвесторов Москвы – постоянно действующее объединение, без образования юридического лица, целью деятельности которого является обеспечение конструктивного диалога, формирование атмосферы доверия и эффективное взаимодействие между органами государственной власти города Москвы и представителями бизнес-сообщества города Москвы в сфере градостроительной и имущественно-земельной политики.
       .vam_helper
+  section.slide_5
+    .b_layout
+      .text
+        .title.typo_sh ИНформация о клубе
+        p Статус создаваемого объединения как консультативной и совещательной площадки профессионального сообщества инвесторов и органами власти. Финансирование деятельности Клуба осуществляется за счет собственных средств узкого круга инвесторов. 
+      .steps
+        .pure-g
+          .pure-u-10-24
+            .step(style='margin-top: 150px;')
+              .label шаг <em>2</em>
+              p Оценка системности выявленных проблем, причин их возникновения
+            .step(style='margin-top: 180px;')
+              .label шаг <em>4</em>
+              p Оценка перспектив инвестиционной деятельности исходя из развития нормативно-правовой базы
+          .pure-u-4-24
+            i.round(style='margin-top: 0px;')
+            i.round(style='margin-top: 160px;')
+            i.round(style='margin-top: 130px;')
+            i.round(style='margin-top: 150px;')
+            i.round(style='margin-top: 170px;')
+          .pure-u-10-24
+            .step
+              .label шаг <em>1</em>
+              p Выявление и обобщение информации о проблемах осуществления инвестиционной деятельности (в том числе, проблем взаимодействия инвесторов с уполномоченными органами исполнительной власти города Москвы в сфере имущественно-земельных отношений и градостроительной деятельности)
+            .step(style='margin-top: 100px;')
+              .label шаг <em>3</em>
+              p Выработка согласованных членами Клуба вариантов решений выявленных проблем на основе экспертных заключений и юридического анализа
+            .step(style='margin-top: 200px;')
+              .label шаг <em>5</em>
+              p Доведение до сведения Мэра Москвы и заместителей Мэра Москвы в Правительстве Москвы по вопросам градостроительной политики и строительства, имущественно-земельных отношений, выработанных по результатам проведенной работы предложений
+  section.slide_6
+    .b_layout
+      .vam
+        .title.typo_sh Участие в клубе
+        p Участие в деятельности Клуба может принять любой инвестор для чего, инвестор обращается в аппарат Клуба с предложением актуальной темы, затрагивающей права и интересы широкого круга лиц. После подтверждения аналитической группой Клуба актуальности проблемы, она выносится на широкое обсуждение и при необходимости формируется рабочая группа с привлечением представителей инвестора предложившего данную тему к обсуждению (по желанию). 
+      .vam_helper
+  section.slide_7
+    .b_layout
+      .vam
+        .title.typo_sh Дополнительная информация
+        p Для обсуждения значимых вопросов по основным направлениям деятельности Клуба приглашаются представители широкого круга инвесторов, принимающих участие в деятельности Клуба, и представители органов власти города Москвы.
+        p Для проработки отдельных, требующих экспертной оценки вопросов, по выявленным проблемам в рамках деятельности Клуба образуются постоянные или временные рабочие группы.
+        p Для финансирования расходов на изготовление презентационных и иных материалов по вопросам деятельности Клуба, подготовку экспертных заключений, аналитических и юридических справок может привлекаться широкий круг инвесторов, принимающих участие в деятельности Клуба.
+        p.center 
+          a.button(href='#') Посмотреть проект
+      .vam_helper
+
+
+
