--- a/less/application.less
+++ b/less/application.less
@@ -35,6 +35,7 @@ footer {
     float: left;
     margin: 0 0 0 40px;
     .slab();
+    font-weight: 300;
     a.active {
       color: @h_color;
     }
@@ -299,6 +300,12 @@ footer {
     .title { font-size: 24px; text-transform: uppercase; }
     p { font-size: 16px; line-height: 32px; margin: 0; }
   }
+}
+.b_marker {
+  height: 46px;
+  width: 31px;
+  background: url(../images/marker.png) no-repeat;
+  display: block;
 }
 .b_links {
   margin: 0 0 -90px 0;
