--- a/news_page.jade
+++ b/news_page.jade
@@ -26,7 +26,9 @@ block content
           .title Категории
           ul
             li
-              a(href='#') > Все новости
+              a(href='#') > Все
+            li
+              a(href='#') > Новости
             li
               a(href='#') > Тендеры
             li
